Fixed issue with input visibility and added subtle background to header

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ html {
 
 body {
   font-family: monospace;
-  background-color: #f0f3f6;
+  background-color: #edf0f4;
   line-height: 1;
   max-width: 160rem;
 }
@@ -34,6 +34,7 @@ header {
   display: flex;
   height: 8rem;
   align-items: center;
+  background-image: linear-gradient(to right, #dee4ea, #edf0f4);
 }
 
 .app-title {
@@ -182,7 +183,6 @@ i {
 .flex-form *:focus {
   outline: none;
   box-shadow: 0 0 0 0.8rem rgba(196, 203, 209, 0.5);
-  color: rgb(196, 203, 209);
 }
 
 .number-input,
@@ -205,11 +205,17 @@ i {
   background-color: #c4cbd1;
   border-radius: 0.2rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  color: inherit;
+  color: #333;
 }
 
 .reset-btn {
   margin-top: 2.6rem;
+  color: #333;
+  transition: all 0.3s;
+}
+
+.reset-btn:hover {
+  background-color: #aeb4ba;
 }
 
 label {
@@ -217,6 +223,7 @@ label {
   font-size: 1.6rem;
   font-weight: 600;
   margin-bottom: 1.2rem;
+  color: #333;
 }
 
 .forms {
